Fixed alignment and title for portfolio page

--- a/portfolio2021/src/App.css
+++ b/portfolio2021/src/App.css
@@ -10,6 +10,9 @@ body {
   );
 }
 
+.App {
+  background-color: #2f2d2e;
+}
 header {
   position: relative;
   height: 650px;
@@ -346,7 +349,23 @@ ul#nav li.current a {
 
 /* Portfolio */
 
-#myCarousel .carousel-caption {
+.flex-container {
+  background-color: #2f2d2e;
+
+  padding-top: 50px;
+  padding-bottom: 73px;
+  overflow: hidden;
+  margin-left: 1px;
+  padding-left: 12rem;
+}
+#myCarousel1 h1 {
+  font: 18px/24px "opensans-bold", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding-bottom: 0rem;
+  padding-left: 1rem;
+}
+#myCarousel1 .carousel-caption {
   left: 0;
   right: 0;
   bottom: 0;
